@@ -33,12 +33,6 @@
   text-align: center;
 }
 
-html.js a.views-throbbing,
-html.js span.views-throbbing {
-  background:url(../images/status-active.gif) no-repeat right center;
-  padding-right:18px;
-}
-
 /* administrative hover links */
 
 div.view div.views-admin-links {
